--- a/index.html
+++ b/index.html
@@ -1,116 +1,185 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISRAEL HAYOM - School Project</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Roboto', Arial, sans-serif; background: #fff; margin: 0; }
-        .header { display: flex; flex-direction: column; align-items: center; border-bottom: 2px solid #eee; }
-        .top-bar { width: 100%; display: flex; justify-content: flex-end; align-items: center; padding: 10px 40px 0 0; }
-        .login-form { display: flex; gap: 5px; }
-        .login-form input { padding: 4px 8px; border: 1px solid #ccc; border-radius: 3px; }
-        .login-form button { padding: 4px 10px; border: none; background: #d32f2f; color: #fff; border-radius: 3px; cursor: pointer; }
-        .logo { margin: 10px 0 0 0; }
-        .logo img { height: 70px; }
-        .nav { display: flex; justify-content: center; gap: 40px; margin: 20px 0 10px 0; font-weight: 700; }
-        .nav a { color: #222; text-decoration: none; padding-bottom: 2px; border-bottom: 2px solid transparent; }
-        .nav a.active { color: #d32f2f; border-bottom: 2px solid #d32f2f; }
-        .container { display: flex; justify-content: center; gap: 30px; margin: 30px auto; max-width: 1200px; }
-        .left, .right { width: 22%; }
-        .center { width: 45%; }
-        .article-list { margin-bottom: 30px; }
-        .article { margin-bottom: 25px; }
-        .article .tag { background: #eee; color: #333; font-size: 12px; padding: 2px 8px; border-radius: 3px; display: inline-block; margin-bottom: 5px; }
-        .article-title { font-size: 18px; font-weight: 700; margin: 0 0 5px 0; }
-        .article-author { font-size: 13px; color: #888; margin-bottom: 5px; }
-        .main-article { text-align: center; }
-        .main-article img { width: 100%; max-height: 350px; object-fit: cover; border-radius: 6px; }
-        .main-article .tag { margin: 10px 0; }
-        .main-article-title { font-size: 28px; font-weight: 700; margin: 20px 0 10px 0; }
-        .main-article-meta { font-size: 14px; color: #888; margin-bottom: 10px; }
-        .main-article-content { font-size: 16px; color: #444; margin-bottom: 20px; }
-        .side-article { margin-bottom: 20px; position: relative; }
-        .side-article img { width: 100%; height: 120px; object-fit: cover; border-radius: 6px; }
-        .side-article-title { position: absolute; bottom: 10px; left: 10px; color: #fff; background: rgba(0,0,0,0.5); padding: 5px 10px; border-radius: 3px; font-size: 15px; }
-        @media (max-width: 900px) {
-            .container { flex-direction: column; align-items: center; }
-            .left, .center, .right { width: 95%; }
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Israel Hayom – Mockup</title>
+  <style>
+    :root{
+      --bg:#ffffff;--ink:#111;--muted:#666;--line:#e7e7e7;--accent:#d62828;
+    }
+    *{box-sizing:border-box}
+    body{margin:0;font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;color:var(--ink);background:var(--bg)}
+    a{color:inherit;text-decoration:none}
+    .container{max-width:1180px;margin:0 auto;padding:0 16px}
+    /* Top utility bar */
+    .topbar{border-bottom:1px solid var(--line);font-size:14px}
+    .topbar .wrap{display:grid;grid-template-columns:1fr auto 1fr;align-items:center;gap:12px;padding:8px 0}
+    .date{justify-self:center;color:var(--muted)}
+    .social{justify-self:end;display:flex;gap:14px;align-items:center}
+    .social a{display:inline-grid;place-items:center}
+    .social img{width:16px;height:16px;display:block}
+
+    /* Masthead */
+    .masthead{padding:10px 0;border-bottom:1px solid var(--line)}
+    .masthead .wrap{display:grid;grid-template-columns:1fr auto 1fr;align-items:center;gap:16px}
+    .newsletter-btn{justify-self:start;background:#111;color:#fff;padding:10px 16px;border-radius:6px;font-weight:800;letter-spacing:.03em}
+    .logo{display:flex;flex-direction:column;align-items:center;justify-content:center}
+    .logo-img{max-width:520px;height:auto}
+    .logo small{display:block;text-align:center;margin-top:4px;color:var(--muted)}
+
+    /* Login mini form (now in masthead) */
+    .login-box{display:flex;gap:6px;flex-wrap:wrap;justify-content:flex-end}
+    .login-box input{padding:6px 8px;border:1px solid var(--line);border-radius:4px;min-width:150px}
+    .login-box button{padding:6px 10px;background:var(--ink);color:#fff;border:0;border-radius:4px;cursor:pointer}
+
+    /* Nav */
+    nav{border-bottom:1px solid var(--line);position:sticky;top:0;background:#fff;z-index:5}
+    .nav{position:relative;display:flex;justify-content:center;align-items:center;padding:12px 0}
+    .tabs{display:flex;gap:28px;align-items:center}
+    .tabs a{font-weight:600}
+    .nav .search{position:absolute;right:16px;top:50%;transform:translateY(-50%);font-weight:700}
+
+    /* Main grid */
+    .grid{display:grid;grid-template-columns:280px 1fr 320px;gap:24px;margin-top:22px}
+    /* Left rail */
+    .rail article{padding:14px 0;border-bottom:1px solid var(--line)}
+    .tag{display:inline-block;background:#f2f2f2;color:#333;font-size:11px;font-weight:800;padding:4px 6px;border-radius:4px;margin-bottom:6px}
+    .rail h4{margin:6px 0 6px;font-size:16px}
+    .by{font-size:12px;color:var(--muted)}
+    /* Feature */
+    .feature figure{margin:0}
+    .feature img{width:100%;height:auto;border-radius:4px}
+    .kicker{display:inline-block;background:#efeded;border:1px solid var(--line);font-size:11px;padding:4px 8px;border-radius:20px;margin:8px 0 0;color:#333}
+    .feature h2{margin:12px 0 10px;font-size:28px;line-height:1.2}
+    .meta{font-size:12px;color:var(--muted)}
+    .excerpt{margin:8px 0 14px;color:#333}
+    .btn{display:inline-block;background:var(--ink);color:#fff;padding:10px 14px;border-radius:6px;font-weight:700}
+    .btn.outline{background:#fff;color:var(--ink);border:1px solid var(--ink)}
+    /* Right rail */
+    .card{display:block;border-bottom:1px solid var(--line);padding-bottom:16px;margin-bottom:16px}
+    .card img{width:100%;height:auto;border-radius:4px}
+    .card h5{margin:8px 0 6px;font-size:16px}
+    /* Footer-ish spacing */
+    .sp{height:40px}
+    /* Responsive */
+    @media (max-width:1100px){
+      .grid{grid-template-columns:1fr}
+      .rail{order:2}
+      .right{order:3}
+      .nav .search{right:10px}
+    }
+  </style>
 </head>
 <body>
-    <div class="header">
-        <div class="top-bar">
-            <form class="login-form" id="loginForm">
-                <input type="text" id="username" placeholder="Username" required>
-                <input type="password" id="password" placeholder="Password" required>
-                <button type="submit">Login</button>
-            </form>
-        </div>
-        <div class="logo">
-            <img src="image1.jpg" alt="ISRAEL HAYOM Logo">
-        </div>
-        <div class="nav">
-            <a href="#" class="active">Home</a>
-            <a href="#">News</a>
-            <a href="#">Opinions</a>
-            <a href="#">Jewish World</a>
-            <a href="#">Lifestyle</a>
-            <a href="#">Magazine</a>
-            <a href="#">In Memoriam</a>
-        </div>
+  <header class="topbar">
+    <div class="container wrap">
+      <div></div>
+      <div class="date">Thursday Sep 4, 2025</div>
+      <div class="social">
+        <a href="#" aria-label="Facebook"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" alt="Facebook"></a>
+        <a href="#" aria-label="X"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/x.svg" alt="X"></a>
+        <a href="#" aria-label="Instagram"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" alt="Instagram"></a>
+        <a href="#" aria-label="TikTok"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/tiktok.svg" alt="TikTok"></a>
+        <a href="#" aria-label="Hebrew">HE</a>
+      </div>
     </div>
-    <div class="container">
-        <div class="left">
-            <div class="article-list">
-                <div class="article">
-                    <span class="tag">GAZA WAR</span>
-                    <div class="article-title">Israel thwarts drone attack on Ben-Gvir</div>
-                    <div class="article-author">LILACH SHOVAL</div>
-                </div>
-                <div class="article">
-                    <span class="tag">GAZA WAR</span>
-                    <div class="article-title">Netanyahu attacks Belgian prime minister</div>
-                    <div class="article-author">DUDI KOGAN</div>
-                </div>
-                <div class="article">
-                    <span class="tag">ISRAEL</span>
-                    <div class="article-title">Satellite images reveal new reactor at Dimona</div>
-                    <div class="article-author">NETA BAR</div>
-                </div>
-                <div class="article">
-                    <span class="tag">MIDDLE EAST</span>
-                    <div class="article-title">UAE warns Israel of damage to ties</div>
-                    <div class="article-author">ILH STAFF</div>
-                </div>
-            </div>
-        </div>
-        <div class="center">
-            <div class="main-article">
-                <img src="image1.jpg" alt="Main Article">
-                <div class="tag">GAZA WAR</div>
-                <div class="main-article-title">IDF chief announces second phase of Operation Gideon's Chariots</div>
-                <div class="main-article-meta">by Lilach Shoval &nbsp; | &nbsp; September 3, 2025</div>
-                <div class="main-article-content">Securing the return of our hostages constitutes a moral and national obligation. We shall persist in targeting Hamas' strategic centers until achieving its defeat," Zamir said.</div>
-            </div>
-        </div>
-        <div class="right">
-            <div class="side-article">
-                <img src="image2.jpg" alt="Side Article 1">
-                <div class="side-article-title">Former Iranian hostage calls Qatar to stop starvation of Israelis in Gaza</div>
-            </div>
-            <div class="side-article">
-                <img src="image3.jpg" alt="Side Article 2">
-                <div class="side-article-title">Father moves shelf in kindergarten, finds viper</div>
-            </div>
-            <div class="side-article">
-                <img src="image4.jpg" alt="Side Article 3">
-                <div class="side-article-title">Jewish organizations push security grant applications</div>
-            </div>
-        </div>
+  </header>
+
+  <div class="masthead">
+    <div class="container wrap">
+      <div class="left">
+        <a class="newsletter-btn" href="#">✉️ NEWSLETTER</a>
+      </div>
+      <div class="center logo">
+        <img class="logo-img" src="logo.svg" alt="Israel Hayom logo" onerror="this.onerror=null;this.src='https://placehold.co/320x70?text=Logo'">
+        <small>This is where we stand</small>
+      </div>
+      <div class="right">
+        <form class="login-box" onsubmit="return false;">
+          <input type="text" placeholder="Username" aria-label="Username" />
+          <input type="password" placeholder="Password" aria-label="Password" />
+          <button>Log in</button>
+        </form>
+      </div>
     </div>
-    <script src="main.js"></script>
+  </div>
+  </div>
+
+  <nav>
+    <div class="container nav">
+      <div class="tabs">
+        <a href="#">Home</a>
+        <a href="#">News ▾</a>
+        <a href="#">Opinions</a>
+        <a href="#">Jewish World ▾</a>
+        <a href="#">Lifestyle ▾</a>
+        <a href="#">Magazine ▾</a>
+        <a href="#">In Memoriam</a>
+      </div>
+      <a class="search" href="#" aria-label="Search">🔍</a>
+    </div>
+  </nav>
+
+  <main class="container grid">
+    <!-- Left rail -->
+    <aside class="rail">
+      <article>
+        <div class="tag">GAZA WAR</div>
+        <h4>IDF chief announces second phase of Operation Gideon's Chariots</h4>
+        <div class="by">LILACH SHOVAL</div>
+      </article>
+      <article>
+        <div class="tag">GAZA WAR</div>
+        <h4>Israel thwarts Hamas drone assassination attack on Ben-Gvir</h4>
+        <div class="by">LILACH SHOVAL</div>
+      </article>
+      <article>
+        <div class="tag">GAZA WAR</div>
+        <h4>'Weak leader': Netanyahu attacks Belgian prime minister</h4>
+        <div class="by">DUDI KOGAN</div>
+      </article>
+      <article>
+        <div class="tag">ISRAEL</div>
+        <h4>Satellite images reveal Israel builds new nuclear reactor at Dimona</h4>
+        <div class="by">NETA BAR</div>
+      </article>
+    </aside>
+
+    <!-- Center feature -->
+    <section class="feature">
+      <figure>
+        <img src="center_image.png" alt="Feature image" onerror="this.onerror=null;this.src='https://placehold.co/820x520?text=Feature+Image'" />
+      </figure>
+      <div class="kicker">HOSTAGE DEAL</div>
+      <h2>Hamas: Ready for a comprehensive deal to end the war</h2>
+      <div class="meta">by Shachar Kleiman • September 3, 2025</div>
+      <p class="excerpt">
+        Hamas announced that it is waiting for Israel's response to a proposal by mediators for a deal that would secure the release of hostages and a ceasefire in Gaza. The organization also said it is prepared for a comprehensive agreement that would include the release of all hostages.
+      </p>
+      <a class="btn" href="#">READ MORE</a>
+    </section>
+
+    <!-- Right rail -->
+    <aside class="right">
+      <a class="card" href="#">
+        <img src="side_image1.png" alt="Story image" onerror="this.onerror=null;this.src='https://placehold.co/360x220?text=Story+Image'" />
+        <h5>UAE warns Israel of damage to ties due to annexation plan</h5>
+        <div class="by">ILH STAFF</div>
+      </a>
+      <a class="card" href="#">
+        <img src="side_image2.png" alt="Story image" onerror="this.onerror=null;this.src='https://placehold.co/360x220?text=Story+Image'" />
+        <h5>Former Iranian hostage calls Qatar to stop starvation of Israelis in Gaza</h5>
+        <div class="by">ARIEL KAHANA</div>
+      </a>
+      <a class="card" href="#">
+        <img src="side_image3.png" alt="Story image" onerror="this.onerror=null;this.src='https://placehold.co/360x220?text=Story+Image'" />
+        <h5>Father moves shelf in kindergarten, finds viper</h5>
+        <div class="by">HANAN GREENWOOD</div>
+      </a>
+    </aside>
+  </main>
+
+  <div class="sp"></div>
 </body>
 </html>
