--- a/index.html
+++ b/index.html
@@ -26,20 +26,19 @@
 
     /* Masthead */
     .masthead{padding:10px 0;border-bottom:1px solid var(--line)}
-    .masthead .wrap{display:grid;grid-template-columns:auto 1fr auto;align-items:center;gap:16px}
+    .masthead .wrap{display:grid;grid-template-columns:auto 1fr auto;align-items:center;gap:16px;height:var(--logo-h, auto)}
     .newsletter-btn{justify-self:start;background:#111;color:#fff;padding:10px 16px;border-radius:6px;font-weight:800;letter-spacing:.03em}
     .logo{display:flex;flex-direction:column;align-items:center;justify-content:center;justify-self:center}
     .logo-img{max-width:520px;height:auto}
 
-    /* Login area */
-    .login-box{display:grid;grid-template-columns:1fr auto;grid-auto-rows:auto;column-gap:6px;row-gap:6px;justify-content:start;width:260px;margin-left:auto;align-self:center}
+    /* Login area (right side of masthead) */
+    .login-box{display:grid;grid-template-columns:minmax(180px,1fr) auto;grid-template-rows:1fr 1fr;column-gap:8px;row-gap:0;justify-content:start;width:280px;margin-left:auto;height:100%;align-items:stretch}
     .login-box input{padding:6px 8px;border:1px solid var(--line);border-radius:4px;width:100%}
-    .login-box .user{grid-column:1 / -1}
-    .login-box .pass{grid-column:1}
-    .login-box .login-btn{grid-column:2;align-self:end;margin-left:6px;padding:6px 10px;background:var(--ink);color:#fff;border:0;border-radius:4px;cursor:pointer}
+    .login-box .user{grid-column:1;grid-row:1;align-self:end}
+    .login-box .pass{grid-column:1;grid-row:2;align-self:start}
+    .login-box .login-btn{grid-column:2;grid-row:2;align-self:start;margin-left:8px;padding:6px 10px;background:var(--ink);color:#fff;border:0;border-radius:4px;cursor:pointer}
     .mast-actions{display:none;gap:10px;align-items:center;justify-content:flex-end}
     .login-cta{display:none;padding:6px 10px;border:1px solid var(--ink);background:#fff;border-radius:6px;font-weight:700}
-    .mast-spacer{display:none}
 
     /* Burger (mobile) */
     .burger-left{width:24px;height:18px;position:relative;display:none}
@@ -59,7 +58,8 @@
     .grid{display:grid;grid-template-columns:minmax(240px,26%) 1fr var(--right-col-w, minmax(160px,22%));gap:clamp(20px,3vw,32px);margin-top:22px;grid-template-areas:"rail feature right"}
     .rail{grid-area:rail}
     .feature{grid-area:feature;text-align:center}
-    .right{grid-area:right}
+    .masthead .right{display:flex;align-items:center;justify-content:flex-end;height:var(--logo-h, auto)}
+    main .right{grid-area:right;display:block;height:auto}
 
     /* Left rail */
     .rail article{padding:14px 0;border-bottom:1px solid var(--line)}
@@ -103,21 +103,19 @@
       nav{display:none}
       .newsletter-btn{display:none}
       .login-box{display:none}
-      .mast-actions{display:none !important}
-      .masthead .wrap{grid-template-columns:40px 1fr 40px;align-items:center}
+      .masthead .wrap{grid-template-columns:40px 1fr auto;align-items:center;min-height:auto}
       .burger-left{display:block}
       .center{grid-column:2;justify-self:center}
-      .mast-spacer{display:block;width:40px;height:18px}
-      /* Keep logo perfectly centered and NOT clipped */
+      .mast-actions{display:flex !important;justify-self:end}
+      /* Keep logo centered and not clipped */
       .logo-img{max-width:clamp(160px, 48vw, 260px);height:auto;margin:0 auto}
 
       /* Stack content in order: feature -> rail -> right */
       .grid{grid-template-columns:1fr;gap:18px;grid-template-areas:"feature" "rail" "right"}
       .feature-img{width:100%}
 
-      /* Mobile login row shown */
-      .mobile-login-row{display:flex;justify-content:center;padding:8px 0}
-      .mobile-login-row .login-cta{display:inline-block}
+      /* Hide the separate mobile login row (now in masthead) */
+      .mobile-login-row{display:none !important}
     }
   </style>
 </head>
@@ -151,7 +149,9 @@
           <input class="pass" type="password" placeholder="Password" aria-label="Password" />
           <button class="login-btn">Log in</button>
         </form>
-        <div class="mast-spacer" aria-hidden="true"></div>
+        <div class="mast-actions">
+          <button class="login-cta">Log in</button>
+        </div>
       </div>
     </div>
   </div>
@@ -235,13 +235,20 @@
 
   <div class="sp"></div>
   <script>
-    // Sync right-rail image height to half of the center feature image height,
-    // and scale widths proportionally (keeping aspect ratio). Also adjust right column width.
+    // Measure feature and logo to drive responsive sizing & alignment.
     (function(){
+      function measureLogo(){
+        const logo = document.querySelector('.logo-img');
+        if(!logo) return;
+        const lh = logo.getBoundingClientRect().height;
+        if(lh>0){
+          document.documentElement.style.setProperty('--logo-h', lh + 'px');
+        }
+      }
       function computeSideDims(){
         const feat = document.querySelector('.feature-img');
         if(!feat) return;
-        const h = feat.getBoundingClientRect().height;
+        const h = feat.getBoundingClientRect().height; // displayed height
         if(h>0){
           document.documentElement.style.setProperty('--side-h', (h/2)+'px');
         }
@@ -252,7 +259,7 @@
           const nw = img.naturalWidth || 0;
           if(nh>0 && nw>0){
             const targetH = h/2;
-            const targetW = (nw/nh) * targetH; // keep aspect
+            const targetW = (nw/nh) * targetH; // keep aspect based on DISPLAYED feature height
             if(targetW > maxW) maxW = targetW;
             img.style.height = targetH + 'px';
             img.style.width = 'auto';
@@ -263,12 +270,16 @@
           }
         });
         if(maxW>0){
-          const capped = Math.min(Math.max(Math.round(maxW), 180), 320); // clamp 180–320px
+          const capped = Math.min(Math.max(Math.round(maxW), 180), 360); // clamp 180–360px for smoother fluidity
           document.documentElement.style.setProperty('--right-col-w', capped + 'px');
         }
       }
       function onReady(){
         const feat = document.querySelector('.feature-img');
+        const logo = document.querySelector('.logo-img');
+        if(logo){
+          if(logo.complete) measureLogo(); else logo.addEventListener('load', measureLogo, {once:true});
+        }
         if(feat){
           if(feat.complete) computeSideDims();
           else feat.addEventListener('load', computeSideDims, {once:true});
@@ -278,7 +289,7 @@
           if(img.complete) computeSideDims();
           else img.addEventListener('load', computeSideDims);
         });
-        window.addEventListener('resize', computeSideDims);
+        window.addEventListener('resize', ()=>{ measureLogo(); computeSideDims(); });
       }
       document.addEventListener('DOMContentLoaded', onReady);
     })();
